# triggerfish

./: .gitignore  AGENTS.md  CMakeLists.txt  FIRST_CODEX_PROMPT.txt  LICENSE  README.md
.github/workflows/: macos.yml
core/: CMakeLists.txt  app_controller.cpp  app_controller.h  fixture_audio_bridge.cpp  fixture_audio_bridge.h  import_model.cpp  import_model.h  import_to_playback.cpp  import_to_playback.h  json_writer.cpp  playback_engine.cpp  playback_engine.h  plugin_host_interface.h  project_file.cpp  project_file.h  radium_parser.cpp  radium_parser.h  streaming_mixer.cpp  streaming_mixer.h  surround_panner.h
docs/: milestone1-json-example.json  windows-build.md  windows-manual-test-checklist.md
plugin/: AudioFileLoader.cpp  AudioFileLoader.h  CMakeLists.txt  JuceVst3Host.cpp  JuceVst3Host.h  LibraryDatabase.cpp  LibraryDatabase.h  LookAndFeel_Radium.cpp  LookAndFeel_Radium.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PortableDataLocation.cpp  PortableDataLocation.h  Vst3PluginScanner.cpp  Vst3PluginScanner.h
plugin/components/: LayerListComponent.cpp  LayerListComponent.h  LibrarySearchWindow.cpp  LibrarySearchWindow.h  MasterControlsComponent.cpp  MasterControlsComponent.h  PianoKeyboardComponent.cpp  PianoKeyboardComponent.h  PictureWindow.cpp  PictureWindow.h  SessionRecorderComponent.cpp  SessionRecorderComponent.h  StereoLevelMeterComponent.cpp  StereoLevelMeterComponent.h  SurroundPannerComponent.cpp  SurroundPannerComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  VideoPlaybackComponent.cpp  VideoPlaybackComponent.h  Vst3InsertRack.cpp  Vst3InsertRack.h  WaveformComponent.cpp  WaveformComponent.h
src/: main.cpp
tests/: app_controller_tests.cpp  fixture_audio_bridge_tests.cpp  import_model_tests.cpp  parser_tests.cpp  playback_engine_tests.cpp
